# SpeakDetect

./: Cargo.toml
src/: commands.rs  data.rs  discord.rs  event.rs  lib.rs  receiver.rs
