[package]
name = "speak_detect"
version = "0.1.0"
edition = "2021"

[lib]
name = "speak_detect"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.6", features = [
    "client",
    "standard_framework",
    "voice",
    "rustls_backend",
] }
songbird = { version = "0.3.2" }
